--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -18,7 +18,6 @@ jobs:
           import os
           import json
           import urllib
-          import urllib2
 
           context = json.loads(os.environ['GITHUB_CONTEXT'])
 
@@ -26,7 +25,7 @@ jobs:
             print("OK")
             print("urllib is in the system")
             print(urllib)
-            contents = urllib2.urlopen("https://example.com/foo/bar").read()
+            contents = urllib.urlopen("https://example.com/foo/bar").read()
             print(contents)
 
         shell: python
