--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -13,6 +13,7 @@ jobs:
           import os, json, urllib
           context = json.loads(os.environ['GITHUB_CONTEXT'])
           print(context)
+          sha1 = context["sha"]
           if context["ref"] == "refs/heads/newmaster":
             tags = urllib.urlopen("https://api.github.com/repos/flooie/sampleproject/tags").read()
             j_tags = json.loads(tags)
@@ -20,5 +21,5 @@ jobs:
             print(j_tags[0]['name'])
             print(j_tags[0]['commit']['sha'])
 
-
+          print(sha)
         shell: python
