--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -21,5 +21,5 @@ jobs:
             print(j_tags[0]['name'])
             print(j_tags[0]['commit']['sha'])
 
-          print(sha)
+          print(sha1)
         shell: python
