--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -16,13 +16,14 @@ jobs:
           if context["ref"] == "refs/heads/newmaster":
             tags = urllib.urlopen("https://api.github.com/repos/flooie/sampleproject/tags").read()
             j_tags = json.loads(tags)
-            print(j_tags)
             print(j_tags[0]['name'])
             print(j_tags[0]['commit']['sha'])
           else:
             tags = urllib.urlopen("https://api.github.com/repos/flooie/sampleproject/tags").read()
             j_tags = json.loads(tags)
-            print(j_tags)
+            print(j_tags[0]['name'])
+            print(j_tags[0]['commit']['sha'])
+
             print(context["ref"])
 
           print(sha1)
