--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -12,12 +12,14 @@ jobs:
         run: |
           import os, json, urllib
           context = json.loads(os.environ['GITHUB_CONTEXT'])
-          sha1 = context["sha"]
+          current_sha1 = context["sha"]
           if context["ref"] == "refs/heads/newmaster":
             tags = urllib.urlopen("https://api.github.com/repos/flooie/sampleproject/tags").read()
             j_tags = json.loads(tags)
-            print(j_tags[0]['name'])
-            print(j_tags[0]['commit']['sha'])
+            tagged_sha1 = j_tags[0]['commit']['sha']
+            if tagged_sha1 == current_sha1:
+              print(tagged_sha1, "==", current_sha1)
+              print("This branch is tagged aaaaaand is the branch we want RUN PYPI...")
           else:
             tags = urllib.urlopen("https://api.github.com/repos/flooie/sampleproject/tags").read()
             j_tags = json.loads(tags)
