--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -21,11 +21,7 @@ jobs:
             print("This branch is tagged aaaaaand is the branch we want RUN PYPI...")
             print(context)
           else:
-            tags = urllib.urlopen("https://api.github.com/repos/flooie/sampleproject/tags").read()
-            j_tags = json.loads(tags)
-            print(j_tags[0]['name'])
-            print(j_tags[0]['commit']['sha'])
-
+            print("this push was not tagged so - no need to pypi it")
             print(context["ref"])
 
 
