--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -4,8 +4,14 @@ on:
 
 jobs:
   py:
+    uses: juliangruber/read-file-action@v1
     runs-on: ubuntu-latest
     steps:
+      - name: Run a one-line script
+        run: |
+          import os
+          print(os.getcwd())
+
       - name: Display the path
         env:
           GITHUB_CONTEXT: ${{ toJson(github) }}
@@ -24,6 +30,7 @@ jobs:
               print("Submit", tag_name, " to PyPI")
 
         shell: python
+
 
 
 #so its only on push
