--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -6,10 +6,14 @@ jobs:
   py:
     runs-on: ubuntu-latest
     steps:
-      - name: Run a one-line script
-        run: |
-          import os
-          print(os.getcwd())
+      - name: Read package.json
+        id: package
+        uses: juliangruber/read-file-action@v1
+        with:
+          path: ./a.json
+
+      - name: Echo package.json
+        run: echo ${{ steps.package.outputs.content }}
 
       - name: Display the path
         env:
