--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -10,7 +10,7 @@ jobs:
         id: package
         uses: juliangruber/read-file-action@v1
         with:
-          path: ./package.json
+          path: ../../package.json
 
       - name: Echo package.json
         run: echo ${{ steps.package.outputs.content }}
