--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -11,6 +11,7 @@ jobs:
           import os, glob
           print(os)
           print(glob.glob("*"))
+          print(os.getcwd)
 
         shell: python
 
