--- a/.github/pypi.yml
+++ b/.github/pypi.yml
@@ -7,11 +7,11 @@
 ##  build:
 ##    runs-on: ubuntu-latest
 ##    steps:
-##      - uses: actions/checkout@v2
-##      - uses: casperdcl/deploy-pypi@v1
-##        with:
-##          password: ${{ secrets.pypi_token }}
-##          build: true
+#      - uses: actions/checkout@v2
+#      - uses: casperdcl/deploy-pypi@v1
+#        with:
+#          password: ${{ secrets.pypi_token }}
+#          build: true
 #
 #name: Sample Project
 #
