--- a/.github/pypi.yml
+++ b/.github/pypi.yml
@@ -4,9 +4,9 @@
 ##    tags:
 ##      - v*.*.*
 ##jobs:
-##  build:
-##    runs-on: ubuntu-latest
-##    steps:
+#  build:
+#    runs-on: ubuntu-latest
+#    steps:
 #      - uses: actions/checkout@v2
 #      - uses: casperdcl/deploy-pypi@v1
 #        with:
