--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -12,6 +12,7 @@ jobs:
   py:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - name: Check tags on this PR
         env:
           GITHUB_CONTEXT: ${{ toJson(github) }}
@@ -34,16 +35,17 @@ jobs:
               print("tagged ID was in the most recent PR and should be sent to PyPI")
               print("Submit", tag_name, " to PyPI")
 
+
         shell: python
 
-  build:
-    runs-on: ubuntu-latest
-    steps:
+#  build:
+#    runs-on: ubuntu-latest
+#    steps:
       - uses: actions/checkout@v2
-      - uses: casperdcl/deploy-pypi@v1
-        with:
-          password: ${{ secrets.pypi_token }}
-          build: true
+#      - uses: casperdcl/deploy-pypi@v1
+#        with:
+#          password: ${{ secrets.pypi_token }}
+#          build: true
 
 
 #  pypi:
