--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -33,11 +33,13 @@ jobs:
             if tagged_sha1 in ids:
               print("tagged ID was in the most recent PR and should be sent to PyPI")
               print("Submit", tag_name, " to PyPI")
+        shell: python
+
 
       - name: Build PYPI
         run: |
-
           print("OKOKKOKOOK")
+          print(tag_url)
 
         shell: python
 
