--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -13,9 +13,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check tags on this PR
-      - id: check
         env:
           GITHUB_CONTEXT: ${{ toJson(github) }}
+      - id: check
         run: |
           import os, json, urllib
 
@@ -38,6 +38,7 @@ jobs:
 
 
       - name: Build PYPI
+      - id: pypi
         run: |
           print("OKOKKOKOOK")
           print(tag_url)
