--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -36,11 +36,10 @@ jobs:
 
         shell: python
 
-
       - name: Build PYPI
+      - uses: actions/checkout@v2
         run: |
           print("OKOKKOKOOK")
-
         shell: python
 
 #  build:
