--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -13,10 +13,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check tags on this PR
-      - uses: actions/checkout@v2
-        env:
+      - env:
           GITHUB_CONTEXT: ${{ toJson(github) }}
-        run: |
+      - run: |
           import os, json, urllib
 
           context = json.loads(os.environ['GITHUB_CONTEXT'])
@@ -35,15 +34,15 @@ jobs:
               print("tagged ID was in the most recent PR and should be sent to PyPI")
               print("Submit", tag_name, " to PyPI")
 
-        shell: python
+      - shell: python
 
 
       - name: Build PYPI
-        run: |
+      - run: |
           print("OKOKKOKOOK")
           print(tag_url)
 
-        shell: python
+      - shell: python
 
 #  build:
 #    runs-on: ubuntu-latest
