--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -37,8 +37,10 @@ jobs:
               print("Submit", tag_name, " to PyPI")
 
       - name: Create Pull Request
-#        shell: python
-        run: echo ${{ steps.vars.outputs }}
+        run: echo "PR_TITLE=[Test] Add report file $(date +%d-%m-%Y)" >> $GITHUB_ENV
+
+
+
 #        run: |
 #          import os, json, urllib
 #          print("OKOOKKOOK")
