--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -43,6 +43,7 @@ jobs:
         run: echo "PR_TITLE=[Test] Add report file $(date +%d-%m-%Y)" >> $GITHUB_ENV
 
       - name: Print PRTITLE
+        shell: python
         if: env.success
         run: |
           import os
