--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -39,17 +39,12 @@ jobs:
           else:
             subprocess.call('echo "success=False" >> $GITHUB_ENV', shell=True)
 
-      - name: Create Pull Request
-        run: echo "PR_TITLE=[Test] Add report file $(date +%d-%m-%Y)" >> $GITHUB_ENV
-
-      - name: Print PRTITLE
+      - name: Generate PYPI
         shell: python
         if: env.success
         run: |
           import os
-          PR_TITLE = os.environ['PR_TITLE']
           other_title = os.environ['success']
-          print(PR_TITLE)
           print(other_title)
 
 
