--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -40,18 +40,13 @@ jobs:
             subprocess.call('echo "success=False" >> $GITHUB_ENV', shell=True)
 
       - name: Generate PYPI
-        if: env.success == "True"
+        if: {{ env.success == "True" }}
         run: |
-          import os
-          other_title = os.environ['success']
-          print(other_title)
+          echo "adsfadsfasdfasdf"
 
-      - name: Generate PYPII
-        if: env.success == "True"
-        run: |
-          import os
-          other_title = os.environ['success']
-          print(other_title)
+#          import os
+#          other_title = os.environ['success']
+#          print(other_title)
 
 
 
