--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -41,7 +41,7 @@ jobs:
 
       - name: Generate PYPI
         run: |
-          echo "{{env.SUCCESSFUL}}"
+          echo {{ env.SUCCESSFUL }}
 
 #          import os
 #          other_title = os.environ['success']
